# mathviz

./: .gitignore  .gitmodules  CMakeLists.txt
assets/shaders/: flat_color.glsl  gradient_2d.glsl  line.glsl  line_morph.glsl  morph.glsl  simple_texture.glsl
cmake/imgui/: CMakeLists.txt
cmake/template/: shader_bindings.h.in
cpp/: context.cpp  expression.cpp  geometry_primitives.cpp  main.cpp  material.cpp  primitives.cpp
include/: context.h  expression.h  geometry_primitives.h  material.h  primitives.h
lib/glutils/: CMakeLists.txt
lib/glutils/cpp/: glutils.cpp  ogl_utils.cpp  primitives.cpp
lib/glutils/include/: glutils.h  ogl_utils.h  primitives.h
sandbox/: CMakeLists.txt  main.cpp
